--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -13,7 +13,10 @@
     <dimen name="button_width">328dp</dimen>
     <dimen name="button_high">220dp</dimen>
     <dimen name="corner_radius">16dp</dimen>
+    <dimen name="corner_radius_400">400dp</dimen>
     <dimen name="small_corner_radius">2dp</dimen>
+
+    <dimen name="stroke_2dp">2dp</dimen>
 
 
     <dimen name="text_size_13sp">13sp</dimen>
