--- a/app/src/main/res/layout/create_playlist_fragment.xml
+++ b/app/src/main/res/layout/create_playlist_fragment.xml
@@ -1,6 +1,110 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_height="match_parent"
+    android:orientation="vertical"
+    tools:context=".medialibrary.ui.playlists_fragment.CreatePlayListsFragment">
+
+    <Toolbar
+        style="@style/ToolBarStyle"
+        android:id="@+id/toolbar"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:title="@string/new_playlist"
+        android:navigationIcon="@drawable/vector_arrow_back"
+        android:titleTextAppearance="@style/ToolbarHeader"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintTop_toTopOf="parent"/>
+
+    <androidx.constraintlayout.widget.Guideline
+        android:id="@+id/leftBorder"
+        app:layout_constraintGuide_begin="@dimen/padding_16"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:orientation="vertical"/>
+
+    <androidx.constraintlayout.widget.Guideline
+        android:id="@+id/rightBorder"
+        app:layout_constraintGuide_end="@dimen/padding_16"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:orientation="vertical"/>
+
+    <ImageView
+        android:id="@+id/imagepickArea"
+        android:layout_width="0dp"
+        android:layout_height="0dp"
+        app:layout_constraintDimensionRatio="h,1:1"
+        android:src="@drawable/image_picker"
+        android:layout_marginVertical="@dimen/padding_26"
+        android:layout_marginHorizontal="@dimen/padding_24"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/toolbar"/>
+
+    <EditText
+        android:id="@+id/playlistNameEditText"
+        android:layout_width="0dp"
+        android:layout_height="54dp"
+        android:background="@drawable/image_picker_textinput"
+        android:layout_marginTop="@dimen/padding_32"
+        app:layout_constraintTop_toBottomOf="@id/imagepickArea"
+        app:layout_constraintStart_toEndOf="@id/leftBorder"
+        app:layout_constraintEnd_toStartOf="@id/rightBorder"/>
+    <TextView
+        android:id="@+id/playlistName"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="  Название* "
+        android:background="@color/white"
+        android:fontFamily="@font/ys_display_regular"
+        android:textColor="@color/yp_blue"
+        android:textFontWeight="400"
+        android:layout_marginStart="@dimen/padding_16"
+        android:layout_marginBottom="46dp"
+        app:layout_constraintStart_toEndOf="@id/leftBorder"
+        app:layout_constraintBottom_toBottomOf="@id/playlistNameEditText"/>
+
+    <EditText
+        android:id="@+id/playlistDescriptionEditText"
+        android:layout_width="0dp"
+        android:layout_height="54dp"
+        android:background="@drawable/image_picker_textinput"
+        android:layout_marginTop="@dimen/padding_16"
+        app:layout_constraintTop_toBottomOf="@id/playlistNameEditText"
+        app:layout_constraintStart_toEndOf="@id/leftBorder"
+        app:layout_constraintEnd_toStartOf="@id/rightBorder"/>
+
+    <TextView
+        android:id="@+id/playlistDescription"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="  Описание "
+        android:background="@color/white"
+        android:fontFamily="@font/ys_display_regular"
+        android:textColor="@color/yp_blue"
+        android:textFontWeight="400"
+        android:layout_marginStart="@dimen/padding_16"
+        android:layout_marginBottom="46dp"
+        app:layout_constraintStart_toEndOf="@id/leftBorder"
+        app:layout_constraintBottom_toBottomOf="@id/playlistDescriptionEditText"/>
+
+    <androidx.appcompat.widget.AppCompatButton
+        android:id="@+id/createPlayListButton"
+        android:layout_width="0dp"
+        android:layout_height="46dp"
+        android:text="@string/create_playlist"
+        android:fontFamily="@font/ys_display_medium"
+        android:textSize="@dimen/text_size_16sp"
+        android:textColor="@color/white"
+        android:textAllCaps="false"
+        android:background="@drawable/create_playlist_button_selector"
+        android:layout_marginBottom="@dimen/padding_32"
+        app:layout_constraintStart_toEndOf="@id/leftBorder"
+        app:layout_constraintEnd_toStartOf="@id/rightBorder"
+        app:layout_constraintBottom_toBottomOf="parent"/>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
