--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -1,12 +1,14 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-
+    <dimen name="padding_1">1dp</dimen>
     <dimen name="padding_4">4dp</dimen>
     <dimen name="padding_8">8dp</dimen>
     <dimen name="padding_12">12dp</dimen>
     <dimen name="padding_16">16dp</dimen>
     <dimen name="padding_24">24dp</dimen>
+    <dimen name="padding_26">26dp</dimen>
     <dimen name="padding_30">30dp</dimen>
+    <dimen name="padding_32">32dp</dimen>
     <dimen name="padding_46">46dp</dimen>
     <dimen name="padding_54">54dp</dimen>
     <dimen name="padding_104">104dp</dimen>
@@ -17,6 +19,8 @@
     <dimen name="small_corner_radius">2dp</dimen>
 
     <dimen name="stroke_2dp">2dp</dimen>
+
+    <dimen name="radius_8">8dp</dimen>
 
 
     <dimen name="text_size_13sp">13sp</dimen>
