--- a/app/src/main/res/layout/create_playlist_fragment.xml
+++ b/app/src/main/res/layout/create_playlist_fragment.xml
@@ -1,110 +1,161 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools"
     xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
     tools:context=".medialibrary.ui.playlists_fragment.CreatePlayListsFragment">
 
     <Toolbar
-        style="@style/ToolBarStyle"
         android:id="@+id/toolbar"
+        style="@style/ToolBarStyle"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:title="@string/new_playlist"
         android:navigationIcon="@drawable/vector_arrow_back"
+        android:title="@string/new_playlist"
         android:titleTextAppearance="@style/ToolbarHeader"
-        app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintTop_toTopOf="parent"/>
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
 
     <androidx.constraintlayout.widget.Guideline
         android:id="@+id/leftBorder"
-        app:layout_constraintGuide_begin="@dimen/padding_16"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:orientation="vertical"/>
+        android:orientation="vertical"
+        app:layout_constraintGuide_begin="@dimen/padding_16" />
 
     <androidx.constraintlayout.widget.Guideline
         android:id="@+id/rightBorder"
-        app:layout_constraintGuide_end="@dimen/padding_16"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:orientation="vertical"/>
+        android:orientation="vertical"
+        app:layout_constraintGuide_end="@dimen/padding_16" />
 
     <ImageView
         android:id="@+id/imagepickArea"
+        android:clickable="true"
         android:layout_width="0dp"
         android:layout_height="0dp"
-        app:layout_constraintDimensionRatio="h,1:1"
-        android:src="@drawable/image_picker"
-        android:layout_marginVertical="@dimen/padding_26"
         android:layout_marginHorizontal="@dimen/padding_24"
+        android:layout_marginVertical="@dimen/padding_26"
+        android:src="@drawable/image_picker"
+        app:layout_constraintDimensionRatio="h,1:1"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/toolbar"/>
+        app:layout_constraintTop_toBottomOf="@id/toolbar" />
 
-    <EditText
-        android:id="@+id/playlistNameEditText"
-        android:layout_width="0dp"
-        android:layout_height="54dp"
-        android:background="@drawable/image_picker_textinput"
-        android:layout_marginTop="@dimen/padding_32"
-        app:layout_constraintTop_toBottomOf="@id/imagepickArea"
-        app:layout_constraintStart_toEndOf="@id/leftBorder"
-        app:layout_constraintEnd_toStartOf="@id/rightBorder"/>
-    <TextView
-        android:id="@+id/playlistName"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="  Название* "
-        android:background="@color/white"
-        android:fontFamily="@font/ys_display_regular"
-        android:textColor="@color/yp_blue"
-        android:textFontWeight="400"
-        android:layout_marginStart="@dimen/padding_16"
-        android:layout_marginBottom="46dp"
-        app:layout_constraintStart_toEndOf="@id/leftBorder"
-        app:layout_constraintBottom_toBottomOf="@id/playlistNameEditText"/>
 
-    <EditText
-        android:id="@+id/playlistDescriptionEditText"
-        android:layout_width="0dp"
-        android:layout_height="54dp"
-        android:background="@drawable/image_picker_textinput"
-        android:layout_marginTop="@dimen/padding_16"
-        app:layout_constraintTop_toBottomOf="@id/playlistNameEditText"
-        app:layout_constraintStart_toEndOf="@id/leftBorder"
-        app:layout_constraintEnd_toStartOf="@id/rightBorder"/>
+<!--    <com.google.android.material.textfield.TextInputLayout-->
+<!--        android:id="@+id/playlistNameEditText"-->
+<!--        android:layout_width="0dp"-->
+<!--        android:layout_height="54dp"-->
+<!--        android:layout_marginTop="@dimen/padding_32"-->
+<!--        android:textColorHint="@color/create_playlist_text_input_selector"-->
+<!--        app:layout_constraintEnd_toStartOf="@id/rightBorder"-->
+<!--        app:layout_constraintStart_toEndOf="@id/leftBorder"-->
+<!--        app:layout_constraintTop_toBottomOf="@id/imagepickArea">-->
 
-    <TextView
-        android:id="@+id/playlistDescription"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="  Описание "
-        android:background="@color/white"
-        android:fontFamily="@font/ys_display_regular"
-        android:textColor="@color/yp_blue"
-        android:textFontWeight="400"
-        android:layout_marginStart="@dimen/padding_16"
-        android:layout_marginBottom="46dp"
-        app:layout_constraintStart_toEndOf="@id/leftBorder"
-        app:layout_constraintBottom_toBottomOf="@id/playlistDescriptionEditText"/>
+<!--        <com.google.android.material.textfield.TextInputEditText-->
+<!--            android:layout_width="match_parent"-->
+<!--            android:layout_height="match_parent"-->
+<!--            android:background="@drawable/create_playlist_text_input_shape_selector"-->
+<!--            android:hint="@string/new_playlist_name"-->
+<!--            android:textAppearance="@style/NewPlayListInputTextAppearance">-->
+
+<!--        </com.google.android.material.textfield.TextInputEditText>-->
+
+<!--    </com.google.android.material.textfield.TextInputLayout>-->
+
+
+<!--    <com.google.android.material.textfield.TextInputLayout-->
+<!--        android:layout_width="0dp"-->
+<!--        android:layout_height="54dp"-->
+<!--        android:layout_marginTop="@dimen/padding_16"-->
+<!--        app:boxCollapsedPaddingTop="8dp"-->
+<!--        android:textColorHint="@color/create_playlist_text_input_selector"-->
+<!--        app:layout_constraintEnd_toStartOf="@id/rightBorder"-->
+<!--        app:layout_constraintStart_toEndOf="@id/leftBorder"-->
+<!--        app:layout_constraintTop_toBottomOf="@id/playlistNameEditText">-->
+
+<!--        <com.google.android.material.textfield.TextInputEditText-->
+<!--            android:layout_width="match_parent"-->
+<!--            android:layout_height="match_parent"-->
+<!--            android:background="@drawable/create_playlist_text_input_shape_selector"-->
+<!--            android:hint="@string/new_playlist_description"-->
+<!--            android:textAppearance="@style/NewPlayListInputTextAppearance">-->
+
+<!--        </com.google.android.material.textfield.TextInputEditText>-->
+
+<!--    </com.google.android.material.textfield.TextInputLayout>-->
+
+        <EditText
+            android:id="@+id/playlistNameEditText"
+            android:layout_width="0dp"
+            android:layout_height="54dp"
+            android:background="@drawable/create_playlist_text_input_shape_selector"
+            android:layout_marginTop="@dimen/padding_32"
+            android:paddingStart="12dp"
+            android:paddingEnd="12dp"
+            android:singleLine="true"
+            app:layout_constraintTop_toBottomOf="@id/imagepickArea"
+            app:layout_constraintStart_toEndOf="@id/leftBorder"
+            app:layout_constraintEnd_toStartOf="@id/rightBorder"/>
+        <TextView
+            android:id="@+id/playListName"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="  Название* "
+            android:background="@color/white"
+            android:fontFamily="@font/ys_display_regular"
+            android:textColor="@color/yp_blue"
+            android:textFontWeight="400"
+            android:layout_marginStart="@dimen/padding_16"
+            android:layout_marginBottom="46dp"
+            app:layout_constraintStart_toEndOf="@id/leftBorder"
+            app:layout_constraintBottom_toBottomOf="@id/playlistNameEditText"/>
+
+        <EditText
+            android:id="@+id/playlistDescriptionEditText"
+            android:layout_width="0dp"
+            android:layout_height="54dp"
+            android:background="@drawable/create_playlist_text_input_shape_selector"
+            android:paddingStart="12dp"
+            android:paddingEnd="12dp"
+            android:singleLine="true"
+            android:layout_marginTop="@dimen/padding_16"
+            app:layout_constraintTop_toBottomOf="@id/playlistNameEditText"
+            app:layout_constraintStart_toEndOf="@id/leftBorder"
+            app:layout_constraintEnd_toStartOf="@id/rightBorder"/>
+
+        <TextView
+            android:id="@+id/playlistDescription"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="  Описание "
+            android:background="@color/white"
+            android:fontFamily="@font/ys_display_regular"
+            android:textColor="@color/yp_blue"
+            android:textFontWeight="400"
+            android:layout_marginStart="@dimen/padding_16"
+            android:layout_marginBottom="46dp"
+            app:layout_constraintStart_toEndOf="@id/leftBorder"
+            app:layout_constraintBottom_toBottomOf="@id/playlistDescriptionEditText"/>
 
     <androidx.appcompat.widget.AppCompatButton
         android:id="@+id/createPlayListButton"
         android:layout_width="0dp"
         android:layout_height="46dp"
-        android:text="@string/create_playlist"
-        android:fontFamily="@font/ys_display_medium"
-        android:textSize="@dimen/text_size_16sp"
-        android:textColor="@color/white"
-        android:textAllCaps="false"
-        android:background="@drawable/create_playlist_button_selector"
         android:layout_marginBottom="@dimen/padding_32"
-        app:layout_constraintStart_toEndOf="@id/leftBorder"
+        android:background="@drawable/create_playlist_button_selector"
+        android:fontFamily="@font/ys_display_medium"
+        android:text="@string/create_playlist"
+        android:textAllCaps="false"
+        android:textColor="@color/white"
+        android:textSize="@dimen/text_size_16sp"
+        app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toStartOf="@id/rightBorder"
-        app:layout_constraintBottom_toBottomOf="parent"/>
+        app:layout_constraintStart_toEndOf="@id/leftBorder" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
