--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -225,7 +225,17 @@
         <item name="android:fontFamily">@font/ys_display_regular</item>
         <item name="android:textSize">12sp</item>
     </style>
+    
+    <style name="NewPlayListInputTextAppearance" parent="TextAppearance.MaterialComponents.Caption">
+        <item name="android:fontFamily">@font/ys_display_regular</item>
+        <item name="android:textSize">16sp</item>
+        <item name="android:textFontWeight">400</item>
+        <item name="android:textColor">@color/yp_black</item>
 
+    </style>
 
+    android:fontFamily="@font/ys_display_regular"
+    android:textColor="@color/yp_blue"
+    android:textFontWeight="400"
 
     </resources>
