gridlayout decoration in progress

--- a/app/src/main/res/navigation/main_navigation_graph.xml
+++ b/app/src/main/res/navigation/main_navigation_graph.xml
@@ -40,5 +40,9 @@
         android:id="@+id/createPlayListsFragment"
         android:name="com.practicum.playlistmaker.medialibrary.ui.playlists_fragment.CreatePlayListsFragment"
         android:label="create_playlist_fragment"
-        tools:layout="@layout/create_playlist_fragment" />
+        tools:layout="@layout/create_playlist_fragment" >
+        <action
+            android:id="@+id/action_createPlayListsFragment_to_mediaLibraryFragment"
+            app:destination="@id/mediaLibraryFragment" />
+    </fragment>
 </navigation>
