--- a/app/src/main/res/layout/playlists_fragment.xml
+++ b/app/src/main/res/layout/playlists_fragment.xml
@@ -4,27 +4,50 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    xmlns:tools="http://schemas.android.com/tools"
     android:orientation="vertical">
 
-<androidx.constraintlayout.widget.ConstraintLayout
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:orientation="vertical"
+        android:paddingHorizontal="@dimen/padding_8">
+
+        <com.google.android.material.button.MaterialButton
+            xmlns:app="http://schemas.android.com/apk/res-auto"
+            android:id="@+id/createPlayListButton"
+            style="@style/RefreshButtonStyle"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="@dimen/padding_24"
+            android:layout_gravity="center_horizontal"
+            android:text="@string/new_playlist"
+            android:textSize="@dimen/text_size_14sp"
+            app:cornerRadius="@dimen/padding_54"
+            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            />
+
+        <androidx.recyclerview.widget.RecyclerView
+            android:id="@+id/playlistsRecyclerView"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            app:layoutManager="androidx.recyclerview.widget.GridLayoutManager"
+            app:spanCount="2"
+            app:layout_constraintTop_toBottomOf="@id/createPlayListButton"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            android:visibility="visible"
+            tools:listitem="@layout/playlist_item"/>
+
+<LinearLayout
     android:id="@+id/emptyPlayListsPH"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
+    app:layout_constraintTop_toBottomOf="@id/createPlayListButton"
+    android:orientation="vertical"
     android:visibility="gone">
-
-    <com.google.android.material.button.MaterialButton
-        xmlns:app="http://schemas.android.com/apk/res-auto"
-        android:id="@+id/createPlayListButton"
-        style="@style/RefreshButtonStyle"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="@dimen/padding_24"
-        android:text="@string/new_playlist"
-        android:textSize="@dimen/text_size_14sp"
-        app:cornerRadius="@dimen/padding_54"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"/>
 
     <ImageView
         style="@style/SearchActivityNothingFoundImagePH"
@@ -32,10 +55,12 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="@dimen/padding_46"
-        app:layout_constraintTop_toBottomOf="@id/createPlayListButton"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"/>
+        android:layout_gravity="center_horizontal"/>
+<!--        app:layout_constraintTop_toBottomOf="parent"-->
+<!--        app:layout_constraintStart_toStartOf="parent"-->
+<!--        app:layout_constraintEnd_toEndOf="parent"-->
 
+        />
     <TextView
         style="@style/LibraryNothingFoundTextPH"
         android:layout_width="wrap_content"
@@ -43,9 +68,15 @@
         android:layout_marginTop="@dimen/padding_16"
         android:text="@string/playlists_are_empty"
         android:gravity="center"
-        app:layout_constraintTop_toBottomOf="@id/emptyPlaylistImg"
-        app:layout_constraintStart_toStartOf="@id/emptyPlaylistImg"
-        app:layout_constraintEnd_toEndOf="@id/emptyPlaylistImg"/>
+        android:layout_gravity="center_horizontal"/>
+<!--        app:layout_constraintTop_toBottomOf="@id/emptyPlaylistImg"-->
+<!--        app:layout_constraintStart_toStartOf="@id/emptyPlaylistImg"-->
+<!--        app:layout_constraintEnd_toEndOf="@id/emptyPlaylistImg"-->
 
-</androidx.constraintlayout.widget.ConstraintLayout>
+        />
+    </LinearLayout>
+
+
+</LinearLayout>
+
 </ScrollView>
