--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
     <dimen name="padding_1">1dp</dimen>
+    <dimen name="padding_3">1dp</dimen>
     <dimen name="padding_4">4dp</dimen>
     <dimen name="padding_8">8dp</dimen>
     <dimen name="padding_12">12dp</dimen>
@@ -21,6 +22,7 @@
     <dimen name="stroke_2dp">2dp</dimen>
 
     <dimen name="radius_8">8dp</dimen>
+    <dimen name="elevation_10">10dp</dimen>
 
 
     <dimen name="text_size_13sp">13sp</dimen>
