--- a/app/src/main/res/layout/playlist_item.xml
+++ b/app/src/main/res/layout/playlist_item.xml
@@ -18,8 +18,7 @@
             android:id="@+id/playlistCover"
             android:layout_width="0dp"
             android:layout_height="0dp"
-            android:layout_marginHorizontal="@dimen/padding_8"
-            android:layout_marginTop="@dimen/padding_16"
+            android:background="@drawable/playlist_background_shape"
             app:layout_constraintDimensionRatio="h,1:1"
             android:scaleType="centerCrop"
             app:layout_constraintTop_toTopOf="parent"
