playlist flow handeled

--- a/app/src/main/res/layout/playlist_item.xml
+++ b/app/src/main/res/layout/playlist_item.xml
@@ -6,7 +6,7 @@
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:background="@null"
-    card_view:cardElevation="2dp">
+    card_view:cardElevation="1dp">
 
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
@@ -24,6 +24,7 @@
             app:layout_constraintTop_toTopOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             card_view:layout_constraintEnd_toEndOf="parent"
+            android:clipToOutline="true"
             tools:src="@tools:sample/backgrounds/scenic" />
 
         <TextView
