--- a/app/src/main/res/drawable/playlist_background_shape.xml
+++ b/app/src/main/res/drawable/playlist_background_shape.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
 <shape xmlns:android="http://schemas.android.com/apk/res/android">
     <corners android:radius="@dimen/padding_8"/>
-    <solid android:color="@android:color/darker_gray"/>
+    <solid android:color="@android:color/transparent"/>
 </shape>
