--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -8,6 +8,7 @@
     <dimen name="padding_16">16dp</dimen>
     <dimen name="padding_24">24dp</dimen>
     <dimen name="padding_26">26dp</dimen>
+    <dimen name="padding_28">28dp</dimen>
     <dimen name="padding_30">30dp</dimen>
     <dimen name="padding_32">32dp</dimen>
     <dimen name="padding_46">46dp</dimen>
@@ -22,6 +23,8 @@
     <dimen name="stroke_2dp">2dp</dimen>
 
     <dimen name="radius_8">8dp</dimen>
+    <dimen name="radius_44">44dp</dimen>
+
     <dimen name="elevation_10">10dp</dimen>
 
 
