--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -225,6 +225,16 @@
         <item name="android:fontFamily">@font/ys_display_regular</item>
         <item name="android:textSize">12sp</item>
     </style>
+
+    <style name="ys_display_medium_text_16" >
+        <item name="android:fontFamily">@font/ys_display_medium</item>
+        <item name="android:textSize">16sp</item>
+    </style>
+
+    <style name="ys_display_medium_text_19" >
+        <item name="android:fontFamily">@font/ys_display_medium</item>
+        <item name="android:textSize">19sp</item>
+    </style>
     
     <style name="NewPlayListInputTextAppearance" parent="TextAppearance.MaterialComponents.Caption">
         <item name="android:fontFamily">@font/ys_display_regular</item>
