--- a/app/src/main/res/layout/playlist_player_fragment_item.xml
+++ b/app/src/main/res/layout/playlist_player_fragment_item.xml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     style="@style/SearchActivityTrackColor"
     android:layout_width="match_parent"
@@ -47,6 +48,20 @@
                 android:maxLength="35"
                 android:ellipsize="end"/>
 
+    </LinearLayout>
+
+    <LinearLayout
+        android:layout_width="0dp"
+        android:layout_height="match_parent"
+        android:layout_weight="2"
+        android:orientation="vertical">
+        <ImageView
+            android:layout_width="wrap_content"
+            android:layout_height="24dp"
+            android:layout_marginTop="20dp"
+            android:layout_gravity="start"
+            android:src="@drawable/baseline_check_24"
+            android:visibility="gone"/>
 
     </LinearLayout>
 
