--- a/app/src/main/res/layout/playlist_player_fragment_item.xml
+++ b/app/src/main/res/layout/playlist_player_fragment_item.xml
@@ -9,7 +9,7 @@
     android:orientation="horizontal">
 
     <ImageView
-        android:id="@+id/playlistCoverImage"
+        android:id="@+id/playlistCover"
         android:layout_width="45dp"
         android:layout_height="45dp"
         android:layout_marginStart="16dp"
@@ -29,7 +29,7 @@
 
         <TextView
             style="@style/SearchActivityTrackSongText"
-            android:id="@+id/trackName"
+            android:id="@+id/playlistName"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_gravity="bottom"
@@ -41,7 +41,7 @@
                 style="@style/SearchActivityTrackArtistText"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:id="@+id/trackArtistName"
+                android:id="@+id/trackNumber"
                 tools:text="item_text_text"
                 android:layout_gravity="bottom"
                 android:maxLines="1"
@@ -56,6 +56,7 @@
         android:layout_weight="2"
         android:orientation="vertical">
         <ImageView
+            android:id="@+id/checkIndicator"
             android:layout_width="wrap_content"
             android:layout_height="24dp"
             android:layout_marginTop="20dp"
