--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -219,21 +219,31 @@
     <style name="BottomNavTextAppearance" >
         <item name="android:fontFamily">@font/ys_display_regular</item>
         <item name="android:textSize">12sp</item>
+        <item name="android:color">@color/yp_black</item>
     </style>
 
     <style name="ys_display_regular_text_12" >
         <item name="android:fontFamily">@font/ys_display_regular</item>
         <item name="android:textSize">12sp</item>
+        <item name="android:color">@color/yp_black</item>
+    </style>
+
+    <style name="ys_display_regular_text_14" >
+        <item name="android:fontFamily">@font/ys_display_regular</item>
+        <item name="android:textSize">14sp</item>
+        <item name="android:color">@color/yp_black</item>
     </style>
 
     <style name="ys_display_medium_text_16" >
         <item name="android:fontFamily">@font/ys_display_medium</item>
         <item name="android:textSize">16sp</item>
+        <item name="android:color">@color/yp_black</item>
     </style>
 
     <style name="ys_display_medium_text_19" >
         <item name="android:fontFamily">@font/ys_display_medium</item>
         <item name="android:textSize">19sp</item>
+        <item name="android:color">@color/yp_black</item>
     </style>
     
     <style name="NewPlayListInputTextAppearance" parent="TextAppearance.MaterialComponents.Caption">
