--- a/app/src/main/res/drawable/create_playlist_button_selector.xml
+++ b/app/src/main/res/drawable/create_playlist_button_selector.xml
@@ -2,5 +2,5 @@
 <selector xmlns:android="http://schemas.android.com/apk/res/android">
     <item android:state_enabled="false" android:drawable="@drawable/create_playlist_button_inactive"/>
     <item android:state_enabled="true" android:drawable="@drawable/create_playlist_button"/>
-    <item android:drawable="@drawable/create_playlist_button"/>
+<!--    <item android:drawable="@drawable/create_playlist_button"/>-->
 </selector>
