--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -210,7 +210,6 @@
     <style name="BottomNavigationStyle">
         <item name="itemTextColor">@color/nav_item_color</item>
         <item name="itemIconTint">@color/nav_item_color</item>
-
         <item name="itemTextAppearanceActive">@style/BottomNavTextAppearance</item>
         <item name="itemTextAppearanceInactive">@style/BottomNavTextAppearance</item>
 
@@ -251,8 +250,30 @@
         <item name="android:textSize">16sp</item>
         <item name="android:textFontWeight">400</item>
         <item name="android:textColor">@color/yp_black</item>
-
     </style>
+
+    <style name="ClassicAttributes">
+        <item name="android:background">@color/white</item>
+        <item name="android:textColor">@color/yp_black</item>
+    </style>
+
+    <style name="PlaylistNotificationStyle">
+        <item name="android:background">@color/yp_black</item>
+        <item name="android:textColor">@color/white</item>
+        <item name="android:fontFamily">@font/ys_display_regular</item>
+        <item name="android:textSize">14sp</item>
+        <item name="android:color">@color/yp_black</item>
+    </style>
+
+    <style name="CreatePlaylistInputStyle" parent="Widget.MaterialComponents.TextInputLayout.OutlinedBox">
+        <item name="boxStrokeColor">@color/create_playlist_text_input_selector</item>
+        <item name="android:textColorHint">@color/yp_black</item>
+    </style>
+
+
+
+
+
 
     android:fontFamily="@font/ys_display_regular"
     android:textColor="@color/yp_blue"
